include/vision/vision_ui_item.h

typedef enum {
    ListItem,
    TitleItem,
    IconItem,
    SwitchItem,
    SliderItem,
    UserItem,
} vision_ui_list_item_type_t;
typedef struct vision_ui_list_item_t {
    vision_ui_list_item_type_t type;
    bool icon_view_mode;

    const char* content;
    uint32_t text_scroll_anchor;

    float scroll_bar_top;
    float scroll_bar_top_velocity;
    float scroll_bar_top_trg;
    float scroll_bar_height;
    float scroll_bar_height_velocity;
    float scroll_bar_height_trg;
    float scroll_bar_scale_part;
    float scroll_bar_scale_part_trg;
    int16_t scroll_bar_top_px;
    int16_t scroll_bar_height_px;

    float y_list_item;
    float y_list_item_trg;

    float icon_scroll_offset;
    float icon_scroll_offset_velocity;
    float icon_scroll_offset_trg;

    uint8_t layer;
    uint8_t child_num;
    size_t capacity;
    struct vision_ui_list_item_t** child_list_item;
    struct vision_ui_list_item_t* parent;
} vision_ui_list_item_t;
typedef struct vision_ui_switch_item_t {
    vision_ui_list_item_t base_item;

    bool value;

    void (*on_changed)(bool value);
} vision_ui_switch_item_t;
typedef struct vision_ui_slider_item_t {
    vision_ui_list_item_t base_item;

    int16_t value;
    bool is_confirmed;
    uint8_t value_step;
    int16_t value_max;
    int16_t value_min;

    uint32_t text_scroll_anchor;

    void (*on_changed)(int16_t value);
} vision_ui_slider_item_t;
typedef struct vision_ui_title_item_t {
    vision_ui_list_item_t base_item;
} vision_ui_title_item_t;
typedef struct vision_ui_icon_item_t {
    vision_ui_list_item_t base_item;

    float title_y;
    float title_y_velocity;
    float title_y_trg;

    const uint8_t* icon; // 30*30 bitmap, can be null
    const char* description; // can be null

    uint32_t description_scroll_anchor;
} vision_ui_icon_item_t;
typedef struct vision_ui_user_item_t {
    vision_ui_list_item_t base_item;

    bool in_user_item;
    bool entering_user_item;
    bool exiting_user_item;

    void (*init_function)();

    void (*loop_function)(); // user_item的逻辑和item写在一起 方便渲染
    void (*exit_function)();

    bool user_item_inited;
    bool user_item_looping;
} vision_ui_user_item_t;
extern vision_ui_list_item_t* vision_ui_list_switch_item_new(
        const char* content,
        bool default_value,
        void (*on_changed)(bool value)
);
extern vision_ui_list_item_t* vision_ui_list_slider_item_new(
        const char* content,
        int16_t default_value,
        uint8_t step,
        int16_t min,
        int16_t max,
        void (*on_changed)(int16_t value)
);
extern vision_ui_list_item_t* vision_ui_list_user_item_new(
        const char* content,
        void (*init_function)(),
        void (*loop_function)(),
        void (*exit_function)()
);