bindings/rust/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_list_item_t"][::std::mem::size_of::<vision_ui_list_item_t>() - 112usize];
    ["Alignment of vision_ui_list_item_t"]
        [::std::mem::align_of::<vision_ui_list_item_t>() - 8usize];
    ["Offset of field: vision_ui_list_item_t::type_"]
        [::std::mem::offset_of!(vision_ui_list_item_t, type_) - 0usize];
    ["Offset of field: vision_ui_list_item_t::icon_view_mode"]
        [::std::mem::offset_of!(vision_ui_list_item_t, icon_view_mode) - 4usize];
    ["Offset of field: vision_ui_list_item_t::owns_child_list"]
        [::std::mem::offset_of!(vision_ui_list_item_t, owns_child_list) - 5usize];
    ["Offset of field: vision_ui_list_item_t::content"]
        [::std::mem::offset_of!(vision_ui_list_item_t, content) - 8usize];
    ["Offset of field: vision_ui_list_item_t::text_scroll_anchor"]
        [::std::mem::offset_of!(vision_ui_list_item_t, text_scroll_anchor) - 16usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_top"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_top) - 20usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_top_velocity"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_top_velocity) - 24usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_top_trg"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_top_trg) - 28usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_height"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_height) - 32usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_height_velocity"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_height_velocity) - 36usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_height_trg"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_height_trg) - 40usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_scale_part"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_scale_part) - 44usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_scale_part_trg"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_scale_part_trg) - 48usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_top_px"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_top_px) - 52usize];
    ["Offset of field: vision_ui_list_item_t::scroll_bar_height_px"]
        [::std::mem::offset_of!(vision_ui_list_item_t, scroll_bar_height_px) - 54usize];
    ["Offset of field: vision_ui_list_item_t::y_list_item"]
        [::std::mem::offset_of!(vision_ui_list_item_t, y_list_item) - 56usize];
    ["Offset of field: vision_ui_list_item_t::y_list_item_trg"]
        [::std::mem::offset_of!(vision_ui_list_item_t, y_list_item_trg) - 60usize];
    ["Offset of field: vision_ui_list_item_t::icon_scroll_offset"]
        [::std::mem::offset_of!(vision_ui_list_item_t, icon_scroll_offset) - 64usize];
    ["Offset of field: vision_ui_list_item_t::icon_scroll_offset_velocity"]
        [::std::mem::offset_of!(vision_ui_list_item_t, icon_scroll_offset_velocity) - 68usize];
    ["Offset of field: vision_ui_list_item_t::icon_scroll_offset_trg"]
        [::std::mem::offset_of!(vision_ui_list_item_t, icon_scroll_offset_trg) - 72usize];
    ["Offset of field: vision_ui_list_item_t::layer"]
        [::std::mem::offset_of!(vision_ui_list_item_t, layer) - 76usize];
    ["Offset of field: vision_ui_list_item_t::child_num"]
        [::std::mem::offset_of!(vision_ui_list_item_t, child_num) - 77usize];
    ["Offset of field: vision_ui_list_item_t::capacity"]
        [::std::mem::offset_of!(vision_ui_list_item_t, capacity) - 80usize];
    ["Offset of field: vision_ui_list_item_t::child_list_item"]
        [::std::mem::offset_of!(vision_ui_list_item_t, child_list_item) - 88usize];
    ["Offset of field: vision_ui_list_item_t::parent"]
        [::std::mem::offset_of!(vision_ui_list_item_t, parent) - 96usize];
    ["Offset of field: vision_ui_list_item_t::owned_next"]
        [::std::mem::offset_of!(vision_ui_list_item_t, owned_next) - 104usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_switch_item_t {
    pub base_item: vision_ui_list_item_t,
    pub value: bool,
    pub on_changed: vision_ui_switch_changed_cb,
    pub on_changed_user_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_switch_item_t"]
        [::std::mem::size_of::<vision_ui_switch_item_t>() - 136usize];
    ["Alignment of vision_ui_switch_item_t"]
        [::std::mem::align_of::<vision_ui_switch_item_t>() - 8usize];
    ["Offset of field: vision_ui_switch_item_t::base_item"]
        [::std::mem::offset_of!(vision_ui_switch_item_t, base_item) - 0usize];
    ["Offset of field: vision_ui_switch_item_t::value"]
        [::std::mem::offset_of!(vision_ui_switch_item_t, value) - 112usize];
    ["Offset of field: vision_ui_switch_item_t::on_changed"]
        [::std::mem::offset_of!(vision_ui_switch_item_t, on_changed) - 120usize];
    ["Offset of field: vision_ui_switch_item_t::on_changed_user_data"]
        [::std::mem::offset_of!(vision_ui_switch_item_t, on_changed_user_data) - 128usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_slider_item_t {
    pub base_item: vision_ui_list_item_t,
    pub value: i16,
    pub is_confirmed: bool,
    pub value_step: u8,
    pub value_max: i16,
    pub value_min: i16,
    pub text_scroll_anchor: u32,
    pub on_changed: vision_ui_slider_changed_cb,
    pub on_changed_user_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_slider_item_t"]
        [::std::mem::size_of::<vision_ui_slider_item_t>() - 144usize];
    ["Alignment of vision_ui_slider_item_t"]
        [::std::mem::align_of::<vision_ui_slider_item_t>() - 8usize];
    ["Offset of field: vision_ui_slider_item_t::base_item"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, base_item) - 0usize];
    ["Offset of field: vision_ui_slider_item_t::value"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, value) - 112usize];
    ["Offset of field: vision_ui_slider_item_t::is_confirmed"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, is_confirmed) - 114usize];
    ["Offset of field: vision_ui_slider_item_t::value_step"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, value_step) - 115usize];
    ["Offset of field: vision_ui_slider_item_t::value_max"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, value_max) - 116usize];
    ["Offset of field: vision_ui_slider_item_t::value_min"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, value_min) - 118usize];
    ["Offset of field: vision_ui_slider_item_t::text_scroll_anchor"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, text_scroll_anchor) - 120usize];
    ["Offset of field: vision_ui_slider_item_t::on_changed"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, on_changed) - 128usize];
    ["Offset of field: vision_ui_slider_item_t::on_changed_user_data"]
        [::std::mem::offset_of!(vision_ui_slider_item_t, on_changed_user_data) - 136usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_title_item_t {
    pub base_item: vision_ui_list_item_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_title_item_t"][::std::mem::size_of::<vision_ui_title_item_t>() - 112usize];
    ["Alignment of vision_ui_title_item_t"]
        [::std::mem::align_of::<vision_ui_title_item_t>() - 8usize];
    ["Offset of field: vision_ui_title_item_t::base_item"]
        [::std::mem::offset_of!(vision_ui_title_item_t, base_item) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_icon_item_t {
    pub base_item: vision_ui_list_item_t,
    pub title_y: f32,
    pub title_y_velocity: f32,
    pub title_y_trg: f32,
    pub icon: *const u8,
    pub description: *const ::std::os::raw::c_char,
    pub description_scroll_anchor: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_icon_item_t"][::std::mem::size_of::<vision_ui_icon_item_t>() - 152usize];
    ["Alignment of vision_ui_icon_item_t"]
        [::std::mem::align_of::<vision_ui_icon_item_t>() - 8usize];
    ["Offset of field: vision_ui_icon_item_t::base_item"]
        [::std::mem::offset_of!(vision_ui_icon_item_t, base_item) - 0usize];
    ["Offset of field: vision_ui_icon_item_t::title_y"]
        [::std::mem::offset_of!(vision_ui_icon_item_t, title_y) - 112usize];
    ["Offset of field: vision_ui_icon_item_t::title_y_velocity"]
        [::std::mem::offset_of!(vision_ui_icon_item_t, title_y_velocity) - 116usize];
    ["Offset of field: vision_ui_icon_item_t::title_y_trg"]
        [::std::mem::offset_of!(vision_ui_icon_item_t, title_y_trg) - 120usize];
    ["Offset of field: vision_ui_icon_item_t::icon"]
        [::std::mem::offset_of!(vision_ui_icon_item_t, icon) - 128usize];
    ["Offset of field: vision_ui_icon_item_t::description"]
        [::std::mem::offset_of!(vision_ui_icon_item_t, description) - 136usize];
    ["Offset of field: vision_ui_icon_item_t::description_scroll_anchor"]
        [::std::mem::offset_of!(vision_ui_icon_item_t, description_scroll_anchor) - 144usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vision_ui_user_item_t {
    pub base_item: vision_ui_list_item_t,
    pub in_user_item: bool,
    pub entering_user_item: bool,
    pub exiting_user_item: bool,
    pub init_function: vision_ui_scene_cb,
    pub loop_function: vision_ui_scene_cb,
    pub exit_function: vision_ui_scene_cb,
    pub user_data: *mut ::std::os::raw::c_void,
    pub user_item_inited: bool,
    pub user_item_looping: bool,
}
